# co_curl

./: .clang-format  .gitattributes  .tm_properties  CMakeLists.txt  README.md  example.cpp  example2.cpp
.github/workflows/: cmake.yml
cmake/: FindCTRE.cmake
examples/: CMakeLists.txt  await-all.cpp  await-all2.cpp  exception.cpp  factorial.cpp  ftp-upload.cpp  hello-world.cpp  jobs.cpp  just-function.cpp  lazy-perform.cpp  lots-of-coroutines.cpp  moves.cpp  multi-failure-propagation.cpp  multiple-awaits-on-one-object.cpp  random.cpp  ranges.cpp  resume.cpp  return.cpp  select.cpp  simplest-hello-world.cpp  sync-easy.cpp
include/co_curl/: CMakeLists.txt  all.hpp  co_curl.cpp  co_curl.hpp  concepts.hpp  curl-version.cpp  easy.cpp  easy.hpp  fetch.hpp  format.hpp  function.hpp  list.cpp  list.hpp  multi.cpp  multi.hpp  out_ptr.hpp  promise.hpp  scheduler.cpp  scheduler.hpp  select.hpp  task.hpp  task_counter.hpp  thread-pool.hpp  url.cpp  url.hpp  version.cpp.in  zstring.hpp
