function(add_example NAME)
	add_executable(${NAME} ${NAME}.cpp)
	target_link_libraries(${NAME} PRIVATE co_curl)
endfunction()

add_example(hello-world)
add_example(simplest-hello-world)
add_example(lazy-perform)
add_example(multiple-awaits-on-one-object)
add_example(multi-failure-propagation)
add_example(lots-of-coroutines)
add_example(sync-easy)
add_example(random)
add_example(ftp-upload)
add_example(factorial)
add_example(just-function)
add_example(jobs)
add_example(moves)
add_example(exception)
add_example(await-all)
add_example(await-all2)
add_example(select)
add_example(resume)
add_example(return)


find_package(CTRE)

if (CTRE_FOUND)
	add_example(ranges)
	target_link_libraries(ranges PRIVATE CTRE::CTRE)
endif()
